// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a deprecated directive with 0 arguments renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
  line-height: 20px;
  display: inline;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  border-radius: 3px;
  font-family: 'Source Code Pro',Menlo,monospace;
  line-height: 20px;
  background-color: #F9FBFA;
  border: 1px solid #E8EDEB;
  color: #1C2D38;
  white-space: nowrap;
  font-size: unset;
  display: inline;
  color: var(--font-color-primary);
  background: var(--background-color-secondary);
  word-wrap: break-word;
  white-space: unset;
}

.lg-ui-0000:hover>.emotion-0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.lg-ui-0000:hover>.emotion-0 {
  box-shadow: 0 0 0 3px #E8EDEB;
  border: 1px solid #C1C7C6;
}

.lg-ui-0000:focus-visible>.emotion-0 {
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
  border: 1px solid #016BF8;
}

a .emotion-0 {
  color: inherit;
}

<div>
    <p>
      <em>
        Deprecated
      </em>
      : 
      <code
        class="emotion-0"
      >
        replicationFactor
      </code>
       is deprecated. Use

      <code
        class="emotion-0"
      >
        replicationSpecs
      </code>
      .
    </p>
  </div>
</DocumentFragment>
`;

exports[`when rendering a versionadded directive with one argument renders correctly  1`] = `
<DocumentFragment>
  <div>
    <p>
      <em>
        New in version 2.2
      </em>
      .
    </p>
  </div>
</DocumentFragment>
`;

exports[`when rendering a versionchanged directive with two arguments renders correctly  1`] = `
<DocumentFragment>
  <div>
    <p>
      <em>
        Changed in version 2.2
      </em>
      : To bind to multiple IP addresses, enter a list of comma separated values.
    </p>
  </div>
</DocumentFragment>
`;
